# ML-Project

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  setup.py  train.csv  train_array.csv
Notebook/: EDA.ipynb  Model_Selection.ipynb
src/: exception.py  logger.py  utils.py
src/components/: data_ingestion.py  data_preprocess.py  data_transformation.py  model_trainer.py
src/pipeline/: predict_pipeline.py  train_pipeline.py
static/styles/: general.css  predict.css
templates/: home.html  index.html  results.html
